--- a/ui2/pubspec.yaml
+++ b/ui2/pubspec.yaml
@@ -69,6 +69,9 @@ flutter:
       - image/car3.png
       - image/car4.png
       - image/car5.png
+      - image/m1.png
+      - image/m2.png
+      - image/m3.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
